--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Roboto', sans-serif;
-
+overflow-x: hidden !important;
 
     background: linear-gradient(108.18deg, #201606 2.46%, #000000 99.84%);
 color: white;
@@ -170,8 +170,33 @@ opacity: 0.4;
 
   @media screen and (max-width:850px){
     .player .player-image-container img {
-      width: 280px;
-      height: 280px;
+      width: 300px;
+      height: 300px;
   }
+
+  .main-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.playlist {
+  color: #FFFFFF;
+  opacity: 0.4;
+  font-size: 16px;
+}
+
+.sidebar-content img {
+  width: 100px;
+  height: auto;
+  margin-bottom: 12px;
+}
  
+  }
+
+  @media screen and (max-width:500px){
+    .player .player-image-container img {
+      width: 200px;
+      height: 200px;
+  }
   }
